# calcrux

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
android/: .gitignore  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/calcrux/: CalcRuxApp.kt  MainActivity.kt
android/app/src/main/java/com/calcrux/data/: DatabaseModule.kt  FxService.kt  HistoryDatabase.kt  NetworkModule.kt  RustBridge.kt
android/app/src/main/java/com/calcrux/ui/calc/: CalculatorScreen.kt  CalculatorViewModel.kt  Keypad.kt
android/app/src/main/java/com/calcrux/ui/convert/: ConvertScreen.kt  ConvertViewModel.kt  UnitLabels.kt
android/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-zh-rTW/: strings.xml
android/gradle/: libs.versions.toml
crates/calcrux-engine/: Cargo.toml
crates/calcrux-engine/src/: error.rs  eval.rs  lexer.rs  lib.rs  number.rs  parser.rs
crates/calcrux-ffi/: Cargo.toml
crates/calcrux-ffi/src/: lib.rs
crates/calcrux-fx/: Cargo.toml
crates/calcrux-fx/data/: rates_fallback.json
crates/calcrux-fx/src/: lib.rs
crates/calcrux-loan/: Cargo.toml
crates/calcrux-loan/src/: lib.rs
crates/calcrux-units/: Cargo.toml
crates/calcrux-units/data/: units.json
crates/calcrux-units/src/: lib.rs
(+10 files in other folders)
